# ECS

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh
ecs/: Component.hpp  ECSPool.hpp  System.hpp
src/: Component.cpp  Component.hpp  ECS.cpp  ECS.hpp  ECSPool.cpp  ECSPool.hpp  System.cpp  System.hpp  main.cpp
tests-src/: Components.hpp  Systems.cpp  Systems.hpp  main.cpp
